--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/avatar.png">
+  <link rel="icon" type="image/png" href="images/f3mlogo.png">
 
 </head>
 
@@ -66,13 +66,13 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
+        <img src="images/f3mlogo.png" srcset="images/f32.png 2x" alt="F3M Logo">
 
         <!-- Title -->
-        <h1>LittleLink</h1>
+        <h1>The Manifest</h1>
 
         <!-- Short Bio -->
-        <p>LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com" target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we've just created some branded buttons and stripped out the things you won't need. 😊</p>
+        <p>The Manifest is a curated gallery of some of the most essential links </p>
 
         <!--
 
