image size constrain

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/f3mlogo.png" srcset="images/f3mlogo.png" alt="F3M Logo">
+        <img className = "photo" src="images/f3mlogo.png" srcset="images/f3mlogo.png" alt="F3M Logo">
 
         <!-- Title -->
         <h1>The Manifest</h1>
