update image size

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img className = "photo" src="images/f3mlogo.png" srcset="images/f3mlogo.png" alt="F3M Logo">
+        <img className = "photo" src="images/f3mlogo.png" srcset="images/f3mlogo.png" alt="F3M Logo" width = "50" height = "50">
 
         <!-- Title -->
         <h1>The Manifest</h1>
