--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
+  <title>The Manifest</title>
   <meta name="description" content="The Manifest">
   <meta name="author" content="Emma-Jane MacKinnon-Lee">
 
@@ -67,8 +67,8 @@
         <h1>The Manifest</h1>
 
         <!-- Short Bio -->
-        <p>The Manifest is a curated gallery of some of the most essential links </p>
-
+        <p>The Manifest is a curated gallery of the most direct ways to advance self sovereignty & the global decentralised fabrication renaissance through web3, cc0, NFTs, web3 fashion, DAOs, and the open metaverse. Personally hand selected by Emma-Jane MacKinnon-Lee</p>
+ 
         <!--
 
           ## Breaking down <a> attributes:
