--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
         <br>
       
         <!-- Github -->
-        <a class="button button-github" href="#" target="_blank" rel="noopener"><img class="icon"
-            src="images/icons/github.svg" alt="GitHub Logo">LOOK Fashion Loot</a>
+        <a class="button button-github" href="#" target="_blank" rel="noopener">LOOK Fashion Loot</a>
         <br>    
 
         <br>
