--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         -->
 
         <!-- Github -->
-        <a class="button button-github" href="#" target="_blank" rel="noopener">Trash Fashion</a>
+        <a class="button button-github" href="#" target="_blank" rel="noopener">Create a New Fashion Movement | 0.1 to 3.1 ETH</a>
         <br>
 
         <!-- Github -->
