--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1>The Manifest</h1>
 
         <!-- Short Bio -->
-        <p>The Manifest is a curated gallery of the most direct ways to advance self sovereignty & the global decentralised fabrication renaissance through web3, cc0, NFTs, web3 fashion, DAOs, and the open metaverse. Personally hand selected by Emma-Jane MacKinnon-Lee</p>
+        <p>The Manifest is a curated gallery of the most direct ways to advance self sovereignty & the global decentralised fabrication renaissance through web3, cc0, NFTs, web3 fashion, DAOs, and the open metaverse. Personally hand selected by Emma-Jane MacKinnon-Lee.</p>
  
         <!--
 
