--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
         <br>
 
         <!-- Github -->
-        <a class="button button-github" href="#" target="_blank" rel="noopener">Young Letters to a VC</a>
+        <a class="button button-github" href="#" target="_blank" rel="noopener">CC0 DAO Membership NFT | $10k USD</a>
         <br>
         
         <!-- Github -->
-        <a class="button button-github" href="#" target="_blank" rel="noopener">DIGIFIZZY</a>
+        <a class="button button-github" href="#" target="_blank" rel="noopener">F₃Manifesto Patron | $10k to $100k USD</a>
         <br>
         
         <!-- Github -->
