--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
   <link rel="stylesheet" href="css/brands.css">
 
+  <link rel="stylesheet" href="css/footer.css">
+
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
