--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 
   <div class="container">
     <div class="row">
-      <img className={styles.imageLogo} src='/images/logoBig.png' alt='logo_big' />
+      <img className={styles.logoBig} src="images/logobig.png" srcset="images/logoBig.png" alt="logoBig" width = "150" height = "150">
     </div>
     
-    <div className={styles.centerWrapper}>
+    <div className={styles.leftWrapper}>
       <div className={styles.description}>
         Reach out across any of our social media channels to get more involved with the manifesto, cc0 web3 fashion & the open metaverse. ALL ENGINEERING AND ARCHITECTURE IS FORKED FROM THE DIGITALAX OPEN SOURCE PROTOCOL STACK.
       </div>
