--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <footer className={styles.footer}>
   <div className={styles.footerWrapper}>
     <div className={styles.textLogo}>
-      <img className={styles.logoBig} src='/images/logoBig.png' alt='logoBig' />
+      <img className={styles.imageLogo} src='/images/logoBig.png' alt='logo_Big' />
     </div>
     
     <div className={styles.centerWrapper}>
