footer width update

--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
         </a>
       </div>
 
+      <div>
+      </div>
+
       <div className={[styles.dFlex, styles.aboutLine].join()}>
         <a href="https://docs.f3manifesto.xyz/" target="_blank">
           SEE ALL DOCUMENTATION
