change to class

--- a/index.html
+++ b/index.html
@@ -104,52 +104,52 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
-<footer className={styles.footer}>
-  <div className={styles.footerWrapper}>
-    <div className={styles.textLogo}>
-      <img className={styles.imageLogo} src='/images/logoBig.png' alt='logo_Big' />
+<footer class={styles.footer}>
+  <div class={styles.footerWrapper}>
+    <div class={styles.textLogo}>
+      <img class={styles.imageLogo} src='/images/logoBig.png' alt='logo_Big' />
     </div>
     
-    <div className={styles.centerWrapper}>
-      <div className={styles.description}>
+    <div class={styles.centerWrapper}>
+      <div class={styles.description}>
         Reach out across any of our social media channels to get more involved with the manifesto, cc0 web3 fashion & the open metaverse. ALL ENGINEERING AND ARCHITECTURE IS FORKED FROM THE DIGITALAX OPEN SOURCE PROTOCOL STACK.
       </div>
 
-      <div className={[styles.dFlex, styles.iconsLine].join()}>
+      <div class={[styles.dFlex, styles.iconsLine].join()}>
 
         <a href="https://www.tiktok.com/@f3manifesto" target="_blank">
           <img
             src="/images/social-icons/tiktok.svg"
             alt="tiktok-icon"
-            className={styles.tiktokIcon}
+            class={styles.tiktokIcon}
           />
         </a>
         <a href="https://www.youtube.com/channel/UC5SOYiDrdooqNusoS5vrJAw" target="_blank">
           <img
             src="/images/social-icons/youtube.svg"
             alt="youtube-icon"
-            className={styles.youtubeIcon}
+            class={styles.youtubeIcon}
           />
         </a>
         <a href="https://f3manifesto.medium.com/" target="_blank">
           <img
             src="/images/social-icons/medium.png"
             alt="medium-icon"
-            className={styles.mediumIcon}
+            class={styles.mediumIcon}
           />
         </a>
         <a href="https://mirror.xyz/f3manifesto.eth" target="_blank">
           <img
             src="/images/social-icons/mirror.png"
             alt="mirror-icon"
-            className={styles.mirrorIcon}
+            class={styles.mirrorIcon}
           />
         </a>
         <a href="https://twitter.com/f3manifesto" target="_blank">
           <img
             src="/images/social-icons/twitter-icon.png"
             alt="twitter-icon"
-            className={styles.twitterIcon}
+            class={styles.twitterIcon}
           />
         </a>
       </div>
@@ -157,7 +157,7 @@
       <div>
       </div>
 
-      <div className={[styles.dFlex, styles.aboutLine].join()}>
+      <div class={[styles.dFlex, styles.aboutLine].join()}>
         <a href="https://docs.f3manifesto.xyz/" target="_blank">
           SEE ALL DOCUMENTATION
         </a>
