update broken tags

--- a/index.html
+++ b/index.html
@@ -5,34 +5,34 @@
 
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>The Manifest</title>
-  <meta name="description" content="The Manifest">
-  <meta name="author" content="Emma-Jane MacKinnon-Lee">
+  <meta name="description" content="The Manifest" />
+  <meta name="author" content="Emma-Jane MacKinnon-Lee" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.css" />
 
   <!-- Themes:
          Auto:   css/skeleton-auto.css
          Light:  css/skeleton-light.css
          Dark:   css/skeleton-dark.css
   -->
-  <link rel="stylesheet" href="css/skeleton-auto.css">
+  <link rel="stylesheet" href="css/skeleton-auto.css" />
 
-  <link rel="stylesheet" href="css/brands.css">
+  <link rel="stylesheet" href="css/brands.css" />
 
-  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/footer.css" />
 
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/f3mlogo.png">
+  <link rel="icon" type="image/png" href="images/f3mlogo.png" />
 
 </head>
 
@@ -46,7 +46,7 @@
 
 
         <!-- Your Image Here -->
-        <img className = "photo" src="images/f3mlogo.png" srcset="images/f3mlogo.png" alt="F3M Logo" width = "150" height = "150">
+        <img class= "photo" src="images/f3mlogo.png" srcset="images/f3mlogo.png" alt="F3M Logo" width = "150" height = "150" />
 
         <!-- Title -->
         <h1>The Manifest</h1>
