remove curly bracket

--- a/index.html
+++ b/index.html
@@ -104,24 +104,24 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
-<footer class={styles.footer}>
-  <div class={styles.footerWrapper}>
-    <div class={styles.textLogo}>
-      <img class={styles.imageLogo} src='/images/logoBig.png' alt='logo_Big' />
+<footer class="styles.footer">
+  <div class="styles.footerWrapper">
+    <div class="styles.textLogo">
+      <img class="styles.imageLogo" src='/images/logoBig.png' alt='logo_Big' />
     </div>
     
-    <div class={styles.centerWrapper}>
-      <div class={styles.description}>
+    <div class="styles.centerWrapper">
+      <div class="styles.description">
         Reach out across any of our social media channels to get more involved with the manifesto, cc0 web3 fashion & the open metaverse. ALL ENGINEERING AND ARCHITECTURE IS FORKED FROM THE DIGITALAX OPEN SOURCE PROTOCOL STACK.
       </div>
 
-      <div class={[styles.dFlex, styles.iconsLine].join()}>
+      <div class="[styles.dFlex, styles.iconsLine].join()">
 
         <a href="https://www.tiktok.com/@f3manifesto" target="_blank">
           <img
             src="/images/social-icons/tiktok.svg"
             alt="tiktok-icon"
-            class={styles.tiktokIcon}
+            class="styles.tiktokIcon"
           />
         </a>
         <a href="https://www.youtube.com/channel/UC5SOYiDrdooqNusoS5vrJAw" target="_blank">
@@ -157,7 +157,7 @@
       <div>
       </div>
 
-      <div class={[styles.dFlex, styles.aboutLine].join()}>
+      <div class="[styles.dFlex, styles.aboutLine].join()">
         <a href="https://docs.f3manifesto.xyz/" target="_blank">
           SEE ALL DOCUMENTATION
         </a>
