--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
-<footer class="styles.footer">
-  <div class="styles.footerWrapper">
-    <div class="styles.textLogo">
-      <img class="styles.imageLogo" src='/images/logoBig.png' alt='logo_Big' />
+<footer class="footer">
+  <div class="footerWrapper">
+    <div class="textLogo">
+      <img class="imageLogo" src='/images/logoBig.png' alt='logo_Big' />
     </div>
     
-    <div class="styles.centerWrapper">
-      <div class="styles.description">
+    <div class="centerWrapper">
+      <div class="description">
         Reach out across any of our social media channels to get more involved with the manifesto, cc0 web3 fashion & the open metaverse. ALL ENGINEERING AND ARCHITECTURE IS FORKED FROM THE DIGITALAX OPEN SOURCE PROTOCOL STACK.
       </div>
 
