--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         Reach out across any of our social media channels to get more involved with the manifesto, cc0 web3 fashion & the open metaverse. ALL ENGINEERING AND ARCHITECTURE IS FORKED FROM THE DIGITALAX OPEN SOURCE PROTOCOL STACK.
       </div>
 
-      <div class="[styles.dFlex, styles.iconsLine].join()">
+      <div class="dFlex iconsLine">
 
         <a href="https://www.tiktok.com/@f3manifesto" target="_blank">
           <img
@@ -157,7 +157,7 @@
       <div>
       </div>
 
-      <div class="[styles.dFlex, styles.aboutLine].join()">
+      <div class="dFlex aboutLine">
         <a href="https://docs.f3manifesto.xyz/" target="_blank">
           SEE ALL DOCUMENTATION
         </a>
