--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
 
       <div class="dFlex aboutLine">
-        <a href="https://docs.f3manifesto.xyz/" target="_blank">
+        <a href="https://docs.f3manifesto.xyz/" target="_blank" class="description">
           SEE ALL DOCUMENTATION
         </a>
       </div>
