--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
       <div>
       </div>
 
-      <div class="dFlex aboutLine">
-        <a href="https://docs.f3manifesto.xyz/" target="_blank" class="description">
+      <div class="dFlex aboutLine description">
+        <a href="https://docs.f3manifesto.xyz/" target="_blank">
           SEE ALL DOCUMENTATION
         </a>
       </div>
