--- a/index.html
+++ b/index.html
@@ -160,12 +160,10 @@
       <div>
       </div>
 
-      <div class="dFlex aboutLine">
-        <div class="description">
+      <div class="dFlex aboutLine description">
         <a href="https://docs.f3manifesto.xyz/" target="_blank">
           SEE ALL DOCUMENTATION
         </a>
-      </div>
       </div>
     </div>
   </div>
