--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <div>
       </div>
 
-      <div class="dFlex aboutLine">
+      <div class="dFlex aboutLine description">
         <a href="https://docs.f3manifesto.xyz/" target="_blank">
           SEE ALL DOCUMENTATION
         </a>
