--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
       </div>
 
       <div class="dFlex aboutLine description">
-        <a href="https://docs.f3manifesto.xyz/" target="_blank">
+        <a href="https://docs.f3manifesto.xyz/" target="_blank" class="footer-text-white">
           SEE ALL DOCUMENTATION
-        </a>
+         </a>
       </div>
     </div>
   </div>
