--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
 
       <div class="dFlex aboutLine description">
-        <a href="https://docs.f3manifesto.xyz/" target="_blank" class="footer-text-white">
+        <a href="https://docs.f3manifesto.xyz/" target="_blank">
           SEE ALL DOCUMENTATION
          </a>
       </div>
