--- a/index.html
+++ b/index.html
@@ -124,35 +124,35 @@
           <img
             src="/images/social-icons/tiktok.svg"
             alt="tiktok-icon"
-            class="styles.tiktokIcon"
+            class="tiktokIcon"
           />
         </a>
         <a href="https://www.youtube.com/channel/UC5SOYiDrdooqNusoS5vrJAw" target="_blank">
           <img
             src="/images/social-icons/youtube.svg"
             alt="youtube-icon"
-            class={styles.youtubeIcon}
+            class="youtubeIcon"
           />
         </a>
         <a href="https://f3manifesto.medium.com/" target="_blank">
           <img
             src="/images/social-icons/medium.png"
             alt="medium-icon"
-            class={styles.mediumIcon}
+            class="mediumIcon"
           />
         </a>
         <a href="https://mirror.xyz/f3manifesto.eth" target="_blank">
           <img
             src="/images/social-icons/mirror.png"
             alt="mirror-icon"
-            class={styles.mirrorIcon}
+            class="mirrorIcon"
           />
         </a>
         <a href="https://twitter.com/f3manifesto" target="_blank">
           <img
             src="/images/social-icons/twitter-icon.png"
             alt="twitter-icon"
-            class={styles.twitterIcon}
+            class="twitterIcon"
           />
         </a>
       </div>
