--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <br />
         
         <!-- Magazine -->
-        <a class="button button-github" href="https://www.digifizzy.xyz/unlockables/" target="_blank" rel="noopener">Web3 Metaverse Publishing NFT Bundles | 0.5 to 2 $MONA</a>
+        <a class="button button-github" href="https://www.digifizzy.xyz/unlockables/" target="_blank" rel="noopener">Web3 Metaverse Publishing NFTs | 0.5 to 2 $MONA</a>
         <br />
       
         <!-- LOOK -->
