add gitbook logo

--- a/index.html
+++ b/index.html
@@ -155,16 +155,25 @@
             class="twitterIcon"
           />
         </a>
+        <a href="https://docs.f3manifesto.xyz/" target="_blank">
+          <img
+            src="/images/social-icons/gitbook.png"
+            alt="gitbook-icon"
+            class="gitbookIcon"
+          />
+        </a>
       </div>
 
       <div>
       </div>
 
-      <div class="dFlex aboutLine">
+    <!--  <div class="dFlex aboutLine">
         <a href="https://docs.f3manifesto.xyz/" target="_blank" class="footer-text-white">
           SEE ALL DOCUMENTATION
          </a>
       </div>
+    --->
+
     </div>
   </div>
 </footer>
