--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@
         <!-- Short Bio -->
         <p>The Manifest is a curated gallery of the most direct ways to advance self sovereignty & the global decentralised fabrication renaissance through web3, cc0, NFTs, web3 fashion, DAOs, and the open metaverse. Personally hand selected by Emma-Jane MacKinnon-Lee.</p>
 
+        <!-- Pop Up -->
+        <a class="button button-github" href="https://popup.f3manifesto.xyz/" target="_blank" rel="noopener">IRL+ Metaverse Streetwear | $50 to $500 USD</a>
+        <br />
+
+        <!-- Stickers -->
+        <a class="button button-github" href="https://popup.f3manifesto.xyz/" target="_blank" rel="noopener">Collectibles, Stickers + Wheatpaste | $5 to $200 USD</a>
+        <br />
+
+        <!-- Auctions -->
+        <a class="button button-github" href="https://auctions.f3manifesto.xyz/" target="_blank" rel="noopener">Daily Cypher Fashion Auctions | 0.1 ETH +</a>
+        <br />
+
+        <!-- Digital -->
+        <a class="button button-github" href="https://market.f3manifesto.xyz/" target="_blank" rel="noopener">Digital Fashion | 0.1 to 20 $MONA</a>
+        <br />
+
         <!-- Trash Fashion -->
         <a class="button button-github" href="https://mirror.xyz/emmajane.eth/2nFFeG7SkR5MuDF9YmHP53EdmaVu4nV_9-J1qg6ReL8" target="_blank" rel="noopener">Create a New Fashion Movement | 0.1 to 3.1 ETH</a>
         <br />
