--- a/index.html
+++ b/index.html
@@ -268,66 +268,71 @@
   <br />
 
   <footer class="footer">
-    <div class="footerWrapper">
-      <div class="textLogo">
-        <img class="imageLogo" src="/images/logoBig.png" alt="logo_Big" />
+    <div class=footerWrapper style="width:100%">
+      <div class=textLogo>
+        <img class=imageLogo src='./images/logoBig.png' alt='logo_big' />
       </div>
-
-      <div class="centerWrapper">
-        <div class="description">
-          Reach out across any of our social media channels to get more involved
-          with the manifesto, cc0 web3 fashion & the open metaverse. ALL
-          ENGINEERING AND ARCHITECTURE IS FORKED FROM THE DIGITALAX OPEN SOURCE
-          PROTOCOL STACK.
+      
+      <div class=centerWrapper>
+        <div class=description>
+          Web3 FASHION CC0 BRAND. 
         </div>
-
-        <div class="dFlex iconsLine">
-          <a href="https://www.tiktok.com/@f3manifesto" target="_blank">
+        <div class=description2>
+          How to make it in web3, make bags & not lose your soul.
+        </div>
+  
+        <div class={[dflex,iconsLine]} style="padding-top:15px; padding-bottom: 20px; align-items: center; justify-content: left; display: flex;">
+          <a href="https://www.tiktok.com/@f3manifesto" target="_blank" rel="noreferrer">
             <img
-              src="/images/social-icons/tiktok.svg"
+              src="./images/social/tiktok-icon.png"
               alt="tiktok-icon"
               class="tiktokIcon"
+              style="width: 28px; height:28px; margin-left: 5px; margin-right: 5px;"
             />
           </a>
-          <a
-            href="https://www.youtube.com/channel/UC5SOYiDrdooqNusoS5vrJAw"
-            target="_blank"
-          >
+          <a href="https://www.youtube.com/channel/UC5SOYiDrdooqNusoS5vrJAw" target="_blank" rel="noreferrer">
             <img
-              src="/images/social-icons/youtube.svg"
+              src="./images/social/youtube-icon.png"
               alt="youtube-icon"
               class="youtubeIcon"
+              style="width: 30px; height:20px; margin-left: 5px; margin-right: 5px;"
             />
           </a>
-          <a href="https://f3manifesto.medium.com/" target="_blank">
+          <a href="https://f3manifesto.medium.com/" target="_blank" rel="noreferrer">
             <img
-              src="/images/social-icons/medium.png"
+              src="./images/social/medium-icon.png"
               alt="medium-icon"
               class="mediumIcon"
+              style="width: 30px; height:30px; margin-left: 5px; margin-right: 5px;"
             />
           </a>
-          <a href="https://mirror.xyz/f3manifesto.eth" target="_blank">
+          <a href="https://mirror.xyz/f3manifesto.eth" target="_blank" rel="noreferrer">
             <img
-              src="/images/social-icons/mirror.png"
+              src="./images/social/mirror.png"
               alt="mirror-icon"
-              class="mirrorIcon"
+              classe="mirrorIcon"
+              style="width: 30px; height:30px; margin-left: 5px; margin-right: 5px;"
             />
           </a>
-          <a href="https://twitter.com/f3manifesto" target="_blank">
+          <a href="https://twitter.com/f3manifesto" target="_blank" rel="noreferrer">
             <img
-              src="/images/social-icons/twitter-icon.png"
+              src="./images/social/twitter-icon.png"
               alt="twitter-icon"
               class="twitterIcon"
-            />
+              style="width: 30px; height:30px; margin-left: 5px; margin-right: 5px;"
+            /> 
           </a>
-          <a href="https://docs.f3manifesto.xyz/" target="_blank">
+          <a href="https://docs.f3manifesto.xyz/" target="_blank" rel="noreferrer">
             <img
-              src="/images/social-icons/gitbook.png"
+              src="./images/social/gitbook.png"
               alt="gitbook-icon"
               class="gitbookIcon"
-            />
+              style="width: 30px; height:30px; margin-left: 5px; margin-right: 5px"
+            /> 
           </a>
         </div>
+      </div>
+    </div>
 
         <div></div>
 
