--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/f3mlogo.png" />
+  <a href="https://www.f3manifesto.xyz" target="_blank" rel="noreferrer">
+    <link rel="icon" type="image/png" href="images/f3mlogo.png" /> </a>
   </head>
 
   <body>
