--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <a href="https://www.f3manifesto.xyz" target="_blank" rel="noreferrer">
-    <link rel="icon" type="image/png" href="images/f3mlogo.png" /> </a>
+    <link rel="icon" type="image/png" href="images/f3mlogo.png" />
   </head>
 
   <body>
@@ -40,6 +39,7 @@
       <div class="row">
         <div class="column" style="margin-top: 5%">
           <!-- Your Image Here -->
+          <a href="https://www.f3manifesto.xyz" target="_blank" rel="noreferrer">
           <img
             class="photo"
             src="images/f3mlogo.png"
@@ -48,6 +48,7 @@
             width="150"
             height="150"
           />
+          </a>
 
           <!-- Title -->
           <h1>The Manifest</h1>
